#28: Fixing overscan so at lower resolutions, you can still see the RHS of the screen. Also adding 'fill %100' button for quick jump to 0% overscan. Making 'default' overscan 7% instead of pixel value.

--- a/src/kylo/chrome/gloss/skin/polo/controls/controls.css
+++ b/src/kylo/chrome/gloss/skin/polo/controls/controls.css
@@ -458,7 +458,3 @@ richlistitem[type="tabswitch"][selected=true] > vbox > description.item-uri {
 	padding: 20px;
 }
 
-.horizontal-overscan-bump {
-    width: 64px;
-}   
-
