--- a/src/kylo/chrome/gloss/skin/polo/polo.css
+++ b/src/kylo/chrome/gloss/skin/polo/polo.css
@@ -19,188 +19,14 @@ panel {
 	background: none;
 }
 
-#anchor-top,
-#overscan-top, 
-#overscan-bottom, 
-#overscan-left, 
-#overscan-right {
-	background: black;
-}
-
-#overscan-top[active=true], 
-#overscan-bottom[active=true], 
-#overscan-left[active=true], 
-#overscan-right[active=true] {
-	background: #a6a6a6;
-}
-
-#overscan-adjust {
-    background: #cbcac6;
-    border: 10px solid #efefef;
-}
-
-#overscan-adjust[highlight~=bottom] {
-    border-bottom-color: #1152f4;
-}
-
-#overscan-adjust[highlight~=left] {
-    border-left-color: #1152f4;
-}
-
-#overscan-adjust[highlight~=right] {
-    border-right-color: #1152f4;
-}
-
-#overscan-adjust[highlight~=top] {
-    border-top-color: #1152f4;
-}
-
-#overscan-textrow {
-    color: #3b3b3b;
-    font-size: 38px;
-    padding: 22px 25px;
-    -moz-box-align: center;
-    -moz-box-pack: center;
-}
-
-#overscan-arrow-box-outer{
-    -moz-box-align: center;
-    -moz-box-pack: center;
-}
-
-#overscan-arrow-box-mid {
-    -moz-box-align: center;
-    -moz-box-pack: center;
-}
-
-
-#overscan-arrow-box-inner {
-    background: black;
-    border: 10px solid #efefef;
-    width: 628px;
-    height: 328px;
-    -moz-box-align: center;
-    -moz-box-pack: center;
-    margin: 13px 15px;
-    padding: 18px;
-
-}
-
-#overscan-arrow-box-inner >hbox {
-    width: 628px;
-}
-
-
-
-/* TODO: remove this hack; this is intended to blend in to the background and be invisible */
-#overscan-counter {
-	width: 100px;
-    color: black;
-}
-
-
-#overscan-buttons {
-    -moz-box-align: center;
-    margin-left: 30px;
-}
-
-.overscan-arrow {
-    -moz-appearance: none;
-    -moz-border-top-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-bottom-colors: none;
-    -moz-user-select: -moz-none;
-    -moz-border-image: none;
-    -moz-margin-start: 0px;
-    min-width: inherit;    
-    height: 88px;
-    width: 103px;
-}    
-    
-.overscan-arrow:hover {
-    -moz-border-image: none;
-}
-
-.overscan-arrow:focus > .button-box {
-    border: none;
-}
-
-#overscan-arrow-left-more, #overscan-arrow-left-less,
-#overscan-arrow-right-more, #overscan-arrow-right-less {
-    height: 103px;
-    width: 88px;
-}
-
-#overscan-arrow-bottom-less {
-    background: url("overscan/bottom_less.png") no-repeat;
-}
-
-#overscan-arrow-bottom-less:hover {
-    background: url("overscan/bottom_less_hover.png") no-repeat;
-}
-
-#overscan-arrow-bottom-more {
-    background: url("overscan/bottom_more.png") no-repeat;
-}
-
-#overscan-arrow-bottom-more:hover {
-    background: url("overscan/bottom_more_hover.png") no-repeat;
-}
-
-#overscan-arrow-left-less {
-    background: url("overscan/left_less.png") no-repeat;
-}
-
-#overscan-arrow-left-less:hover {
-    background: url("overscan/left_less_hover.png") no-repeat;
-}
-
-#overscan-arrow-left-more {
-    background: url("overscan/left_more.png") no-repeat;
-}
-
-#overscan-arrow-left-more:hover {
-    background: url("overscan/left_more_hover.png") no-repeat;
-}
-
-#overscan-arrow-right-less {
-    background: url("overscan/right_less.png") no-repeat;
-}
-
-#overscan-arrow-right-less:hover {
-    background: url("overscan/right_less_hover.png") no-repeat;
-}
-
-#overscan-arrow-right-more {
-    background: url("overscan/right_more.png") no-repeat;
-}
-
-#overscan-arrow-right-more:hover {
-    background: url("overscan/right_more_hover.png") no-repeat;
-}
-
-#overscan-arrow-top-less {
-    background: url("overscan/top_less.png") no-repeat;
-}
-
-#overscan-arrow-top-less:hover {
-    background: url("overscan/top_less_hover.png") no-repeat;
-}
-
-#overscan-arrow-top-more {
-    background: url("overscan/top_more.png") no-repeat;
-}
-
-#overscan-arrow-top-more:hover {
-    background: url("overscan/top_more_hover.png") no-repeat;
+#anchor-top {
+  background: black;
 }
 
 #zoomVeil:not([os="x11"]) {
 	background: url("images/zoom/pan-zoom_veil.png") repeat;
 	cursor: url("./zoom_cursor.png"), move !important;
 }
-
 
 #panLeft {
     display: none;
